--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         <input type="text" id="name" name="user_name"><br>
                     
                         <label for="mail">E-mail:</label><br>
-                        <input type="email" id="mail" name="user_mail"><br>
+                        <input textarea rows="10" cols="40"type="email" id="mail" name="user_mail"><br>
                     
                         <label for="msg">Message:</label><br>
                         <textarea rows="10" cols="40" name="message" id="message"></textarea><br>
