--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <nav>
         
         <ul>
-                   <li><a href="https://redgemini.github.io/Basic-Portfolio/contacts.html">Contact</a></li>
-                   <li><a href="https://redgemini.github.io/Basic-Portfolio/portfolio.html">Portfolio</a></li>
-                   <li><a href="https://redgemini.github.io/Basic-Portfolio/index.html">About</a></li>
+                   <li><a href="contact.html">Contact</a></li>
+                   <li><a href="portfolio.html">Portfolio</a></li>
+                   <li><a href="index.html">About</a></li>
         </ul>
             </nav>
             
