--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
     <nav>
         
         <ul>
-                   <li><a href="#">Contact</a></li>
-                   <li><a href="#">Portfolio</a></li>
-                   <li><a href="#">About</a></li>
-        </ul>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">About</a></li>
+ </ul>
 
     </nav>
             
