--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--Homework Assigment #1 Basic Bio Website-->
 
 <!DOCTYPE html>
-<html class=htlm lang="en-us">
+<html "class"=htlm lang="en-us">
 
 <!--HEAD: Wraps the Header of the Page-->
 <head>
@@ -34,16 +34,17 @@
         </nav>
             
             <div>
-                <aside>
-                    <h3>Connect with Me</h3>
-                    <img src= "assets/images/github.png" alt= "github" height="40" width="40">
-                    <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
-                    <img src= "assets/images/stack.overflow.png" alt= "github" height="40" width="40">
-                </aside>
+                    <aside>
+                            <h3>Connect with Me</h3>
+                            <img src= "assets/images/github.png" alt= "github" height="40" width="40">
+                            <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
+                            <img src= "assets/images/stack.overflow.png" alt= "github" height="40" width="40">
+
+                    </aside>
                 
                 <article>
                     <h2>About Me</h2>
-
+                    <hr>
                     <img src= "assets/images/bio-photo.png" alt= "Profile Photo of Wendy Kiddy" height="200" width="200">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -53,7 +54,7 @@
                                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
                                and more recently with desktop publishing software like Aldus PageMaker including 
                                versions of Lorem Ipsum.</p>
-            </article>  
+                 </article>  
 
         </div> 
 
