--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!--Homework Assigment #1 Basic Bio Website-->
 
 <!DOCTYPE html>
-<html class=htlm lang="en-us">
+<html class="htlm" lang="en-us">
 
 <!--HEAD: Wraps the Header of the Page-->
 <head>
@@ -42,13 +42,15 @@
                         <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
                         <img src= "assets/images/stack.overflow.png" alt= "github" height="40" width="40">
                     </aside>
-                        <section class: portpic>
+                        <section class: "portpic">
+                                <h2>Portfolio</h2>
+                                <hr>
                                 <img src= "assets/images/hangman.jpg" alt= "Hangman"height="150px" width="250px">
                                 <img src= "assets/images/rpg games.jpg" alt= "rpg games"height="150px" width="250px">
                                 <img src= "assets/images/trivia games.jpg" alt= "trivia game"height="150px" width="250px">
                                 <img src= "assets/images/rutgers info widget.jpg" alt= "rutgers info widget"height="150px" width="250px">
                                 <img src= "assets/images/rock paper scissors.jpg" alt= "rock paper scissors"height="150px" width="250px">
-                                <a href="#"></a><div id="Hangman" class="portpic">
+                                <a href="#"></a><div id="Hangman" class="hover">
                                         
                         </section>   
                     </div> 
