social link update

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,17 @@
         <div>
                 <aside>
                         <h3>Connect with Me</h3>
-                        <img src= "assets/images/github.png" alt= "github" height="40" width="40">
+                        <hr>
+                        <a href="https://github.com/redgemini" target="_blank">
+                        <img src="assets/images/github.png" alt="GitHub" alt= "GitHub" height="40" width="40"> </a>
+                        <a href="https://www.linkedin.com/in/wendy-kiddy-leed-green-associate-41481911/" target="_blank">
                         <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
-                        <img src= "assets/images/stack.overflow.png" alt= "github" height="40" width="40">
+                        <a href="#" target="_blank">
+                        <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40">
                     </aside>
+
                         <section class: "portpic">
                                 <h2>Portfolio</h2>
-                                <hr>
                                 <img src= "assets/images/hangman.jpg" alt= "Hangman"height="150px" width="250px">
                                 <img src= "assets/images/rpg games.jpg" alt= "rpg games"height="150px" width="250px">
                                 <img src= "assets/images/trivia games.jpg" alt= "trivia game"height="150px" width="250px">
