--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,19 @@
                 <div>
                         <aside>
                                 <h3>Connect with Me</h3>
-                                <img src= "assets/images/github.png" alt= "github" height="40" width="40">
+                                <hr>
+                                <a href="https://github.com/redgemini" target="_blank">
+                                <img src="assets/images/github.png" alt="GitHub" alt= "GitHub" height="40" width="40"> </a>
+                                <a href="https://www.linkedin.com/in/wendy-kiddy-leed-green-associate-41481911/" target="_blank">
                                 <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
-                                <img src= "assets/images/stack.overflow.png" alt= "github" height="40" width="40">
-                        </aside>
+                                <a href="#" target="_blank">
+                                <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40">
+                            </aside>        
 
                         <article>
                         <form action="#" method="post" class="contacts">
                             <h2>Contact</h2>
-                              <hr>              
+                              <hr>            
                             <label for="name">Name:</label><br>
                                                     <input type="text" id="name" name="user_name"><br>
                                                 
