verify commit is current

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,16 +36,19 @@
     </nav>
             
         <div>
-                <aside>
-                        <h3>Connect with Me</h3>
-                        <hr>
-                        <a href="https://github.com/redgemini" target="_blank">
-                        <img src="assets/images/github.png" alt="GitHub" alt= "GitHub" height="40" width="40"> </a>
-                        <a href="https://www.linkedin.com/in/wendy-kiddy-leed-green-associate-41481911/" target="_blank">
-                        <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
-                        <a href="#" target="_blank">
-                        <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40">
-                    </aside>
+            <aside>
+                <h3>Connect with Me</h3>
+                <hr>
+                <a href="https://github.com/redgemini" target="_blank">
+                <img src="assets/images/github.png" alt="GitHub" alt= "GitHub" height="40" width="40"> </a>
+
+                <a href="https://www.linkedin.com/in/wendy-kiddy-leed-green-associate-41481911/" target="_blank">
+                <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40"> </a>
+
+                <a href="https://stackoverflow.com/users/9306787/redgemini?tab=profile" target="_blank">
+                <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40"> </a>
+            </aside>
+
 
                         <section class: "portpic">
                                 <h2>Portfolio</h2>
