--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
 
         <meta charset="UTF-8">
         <!-- Linking CSS-->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="reset" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title> Wendy Kiddy</title>
 
 </head>
@@ -46,7 +46,7 @@
                 <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40"> </a>
 
                 <a href="https://stackoverflow.com/users/9306787/redgemini?tab=profile" target="_blank">
-                <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40"> </a>
+                <img src="assets/images/stack-overflow.png" alt= "github" height="40" width="40"> </a>
             </aside>
 
            
@@ -54,10 +54,10 @@
                     <h2>Portfolio</h2>
                     <hr>
                     <img src= "assets/images/hangman.jpg" alt= "Hangman"height="150px" width="250px"/>>
-                    <img src= "assets/images/rpg games.jpg" alt= "rpg games"height="150px" width="250px"/>
-                    <img src= "assets/images/trivia games.jpg" alt= "trivia game"height="150px" width="250px"/>
-                    <img src= "assets/images/rutgers info widget.jpg" alt= "rutgers info widget"height="150px" width="250px"/>
-                    <img src= "assets/images/rock paper scissors.jpg" alt= "rock paper scissors"height="150px" width="250px"/>
+                    <img src= "assets/images/rpg-games.jpg" alt= "rpg games"height="150px" width="250px"/>
+                    <img src= "assets/images/trivia-games.jpg" alt= "trivia game"height="150px" width="250px"/>
+                    <img src= "assets/images/widget.jpg" alt= "rutgers info widget"height="150px" width="250px"/>
+                    <img src= "assets/images/rock-paper-scissors.jpg" alt= "rock paper scissors"height="150px" width="250px"/>
                 <a href="#"></a><div id="Hangman" class="hover">
                         
         </section>   
