--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 
         <meta charset="UTF-8">
         <!-- Linking CSS-->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="reset" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>Wendy Kiddy</title>
 
 </head>
@@ -42,7 +42,7 @@
                                 <a href="https://www.linkedin.com/in/wendy-kiddy-leed-green-associate-41481911/" target="_blank">
                                 <img src= "assets/images/linkedin.png" alt= "linkedin" height="40" width="40">
                                 <a href="#" target="_blank">
-                                <img src="assets/images/stack.overflow.png" alt= "github" height="40" width="40">
+                                <img src="assets/images/stack-overflow.png" alt= "github" height="40" width="40">
                             </aside>        
 
                         <article>
